# CopperMC

./: .gitignore  :  :q  Cargo.toml  README.de.md  README.en.md  README.es.md  README.fr.md  README.md  README.ru.md  TODO.md  eula.txt  perf.data  q  server.properties  server_test.properties
.github/workflows/: rust.yml
src/: main.rs  server.properties
src/args/: mod.rs
src/commands/: command_line.rs  mod.rs
src/config/: mod.rs  read_properties.rs
src/consts/: mod.rs
src/file_folder_parser/: mod.rs  utils.rs
src/fs_manager/: mod.rs  utils.rs
src/logging/: mod.rs
src/net/: mod.rs
src/packet/: codec.rs  data_types.rs  mod.rs  utils.rs
src/player/: mod.rs
src/slp/: mod.rs
src/time/: mod.rs
