[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dot-properties = "0.2.0"
colored = "2.1.0"
integer-encoding = "4.0.2"
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0.63"
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
ctrlc = "3.4.5"
once_cell = "1.19.0"
tempfile = "3.12.0"

[profile.release]
opt-level = 3     # optimiosation level 3 is the best
debug = false
split-debuginfo = 'unified'
lto = true
